add GET to /post endpoint

--- a/website/app.html
+++ b/website/app.html
@@ -20,6 +20,7 @@
   		<ul>
   			<li id="home_link">Home</li>
   			<li id="listuser_link">List Users</li>
+			<li id="getposts_link">Get posts</li>
   			<li id="logout_link">Log Out</li>
   		</ul>
   	</div>
