--- a/website/index.html
+++ b/website/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>Napkin</title>
     <link rel="stylesheet" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <script src="https://kit.fontawesome.com/38b3e3c4fb.js" crossorigin="anonymous"></script>
   </head>
+
   <body>
   	<div id="header">
   		<i class="fa-solid fa-bars" id="menu_icon"></i>
@@ -31,6 +33,7 @@
   	</div>
   	<div id="content">
   	</div>
-  	<script type="module" src="demo.js" defer></script>
+
+  	<script type="module" src="script.js" defer></script>
   </body>
   </html>
