--- a/website/index.html
+++ b/website/index.html
@@ -11,8 +11,7 @@
 	<body>
 
 		<div id="header">
-			<i class="fa-solid fa-bars" id="menu_icon"></i>
-			<div class="Nav_Menu" id="Napkin_Home">Napkin</div>
+		<div class="Nav_Menu" id="Napkin_Home">Napkin</div>
 		<div class="Nav_Menu" id="User_Feed">My Feed</div>
 		<div class="Nav_Menu" id="Add_Post">Add a Post</div>
 		<div class="Nav_Menu" id="Friends">Friends</div>
@@ -35,7 +34,13 @@
 		</div>
 
 		<div id="content">
-			
+			<div class="testcube">
+				Test Cube 1
+			</div>
+			<br>
+			<div class="testcube">
+				Test Cube 2
+			</div>
 		</div>
 
 		<script type="module" src="script.js" defer></script>
