--- a/website/index.html
+++ b/website/index.html
@@ -11,36 +11,20 @@
 	<body>
 
 		<div id="header">
-		<div class="Nav_Menu" id="Napkin_Home">Napkin</div>
-		<div class="Nav_Menu" id="User_Feed">My Feed</div>
-		<div class="Nav_Menu" id="Add_Post">Add a Post</div>
-		<div class="Nav_Menu" id="Friends">Friends</div>
-		<div class="Nav_Menu" id="Groups">Groups</div>
-		<div class="Nav_Menu">My Account</div>
-			<div id="notification_hook" class="hidden">
-				<i id="error_icon" class="fa-solid fa-triangle-exclamation hidden"></i>
-				<span>Here is a notification about something that happened</span>
-				<i id="close_notification_icon" class="fa-regular fa-circle-xmark"></i>
-			</div>
-		</div>
-
-		<div id="menu" class="hidden">
-			<ul>
-				<li id="home_link">Home</li>
-				<li id="listuser_link">List Users</li>
-			<li id="getposts_link">Get posts</li>
-				<li id="logout_link">Log Out</li>
-			</ul>
+			<div class="Nav_Menu" id="Napkin_Home">Napkin</div>
+			<div class="Nav_Menu" id="User_Feed">My Feed</div>
+			<div class="Nav_Menu" id="Add_Post">Add a Post</div>
+			<div class="Nav_Menu" id="Friends">Friends</div>
+			<div class="Nav_Menu" id="Groups">Groups</div>
+			<div class="Nav_Menu">My Account</div>
 		</div>
 
 		<div id="content">
-			<div class="testcube">
-				Test Cube 1
-			</div>
+			<div class="testcube">Test Cube 1</div>
 			<br>
-			<div class="testcube">
-				Test Cube 2
-			</div>
+			<div class="testcube">Test Cube 2</div>
+			<br>
+			<div class="testcube">Test Cube 3</div>
 		</div>
 
 		<script type="module" src="script.js" defer></script>
