--- a/website/index.html
+++ b/website/index.html
@@ -11,12 +11,12 @@
 	<body>
 
 		<div id="header">
-			<div class="Nav_Menu" id="Napkin_Home">Napkin</div>
-			<div class="Nav_Menu" id="User_Feed">My Feed</div>
-			<div class="Nav_Menu" id="Add_Post">Add a Post</div>
-			<div class="Nav_Menu" id="Friends">Friends</div>
-			<div class="Nav_Menu" id="Groups">Groups</div>
-			<div class="Nav_Menu">My Account</div>
+			<div class="headerbox" id="Napkin_Home">Napkin</div>
+			<div class="headerbox" id="User_Feed">My Feed</div>
+			<div class="headerbox" id="Add_Post">Add a Post</div>
+			<div class="headerbox" id="Friends">Friends</div>
+			<div class="headerbox" id="Groups">Groups</div>
+			<div class="headerbox">My Account</div>
 		</div>
 
 		<div id="content">
