--- a/website/index.html
+++ b/website/index.html
@@ -5,18 +5,17 @@
 		<title>Napkin</title>
 		<link rel="stylesheet" href="style.css"/>
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-		<script src="https://kit.fontawesome.com/38b3e3c4fb.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
 
 		<div id="header">
-			<div class="headerbox" id="Napkin_Home">Napkin</div>
-			<div class="headerbox" id="User_Feed">My Feed</div>
-			<div class="headerbox" id="Add_Post">Add a Post</div>
-			<div class="headerbox" id="Friends">Friends</div>
-			<div class="headerbox" id="Groups">Groups</div>
-			<div class="headerbox">My Account</div>
+			<div class="headerbox" id="home">Napkin</div>
+			<div class="headerbox" id="myfeed">My Feed</div>
+			<div class="headerbox" id="addpost">Add a Post</div>
+			<div class="headerbox" id="friends">Friends</div>
+			<div class="headerbox" id="groups">Groups</div>
+			<div class="headerbox" id="account">My Account</div>
 		</div>
 
 		<div id="content">
