miniheader, inserbreak broken

--- a/website/index.html
+++ b/website/index.html
@@ -10,11 +10,11 @@
 	<body>
 
 		<div id="content">
-			<div class="testcube">Test Cube 1</div>
+			<div class="testcube">You should not see these.</div>
 			<br>
-			<div class="testcube">Test Cube 2</div>
+			<div class="testcube">You should not see these.</div>
 			<br>
-			<div class="testcube">Test Cube 3</div>
+			<div class="testcube">You should not see these.</div>
 		</div>
 
 		<script type="module" src="script.js" defer></script>
