--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 
-		<div id="content">
+		<div id="testing">
 			<div class="testcube">You should not see these.</div>
 			<br>
 			<div class="testcube">You should not see these.</div>
