--- a/website/index.html
+++ b/website/index.html
@@ -18,5 +18,6 @@
 		</div>
 
 		<script type="module" src="script.js" defer></script>
+		<script type="module" src="pagehelpers.js" defer></script>
 	</body>
 </html>
