--- a/website/index.html
+++ b/website/index.html
@@ -19,5 +19,7 @@
 
 		<script type="module" src="script.js" defer></script>
 		<script type="module" src="pageshelpers.js" defer></script>
+		<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+
 	</body>
 </html>
