--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
 		<title>Napkin</title>
 		<link rel="stylesheet" href="style.css"/>
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-		<meta name="friends_payload">0</meta>
+		<meta name="friends_payload" content="0"/>
 	</head>
 
 	<body>
