--- a/website/index.html
+++ b/website/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="style.css"/>
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 		<meta name="friends_payload" content="0"/>
+		<meta name="friends_name" content="0"/>
 	</head>
 
 	<body>
